name:                parallel-barriers
version:             0.1.0.0
synopsis:            Utility Functions For Parallel Haskell
description:
  Parallel Haskell suffers from the problem, that the sequential part races
  with the evaluation of the sparks. This results often in \"fizzled\" sparks
  and reduced parallelity.
  .
  This package provides utility functions adding \"barrier\" annotations. They
  basically state, that the spark pool should be flushed, before the
  computation continues.
license:             BSD3
license-file:        LICENSE
author:              Johannes Röhl
-- maintainer:          
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Parallel.Barriers
  -- other-modules:       
  build-depends:
    base >=4.3 && <= 4.7,
    parallel >= 1.0 && <= 3.3

Benchmark collatzbenchmark
  type: exitcode-stdio-1.0
  GHC-Options: -O2 -threaded
  main-is: collatzbenchmark.hs
  build-depends:
    criterion,
    base >=4.3 && <= 4.7,
    parallel >= 1.0 && <= 3.3

